--- a/templates/editar.html
+++ b/templates/editar.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Editar Produto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📦</text></svg>">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             background: linear-gradient(to right, #34ebab, #00c4cc);
@@ -33,16 +35,16 @@
         <form action="/editar/{{ produto[0] }}" method="post">
             <div class="row">
                 <div class="col-md-3">
-                    <input type="text" name="nome" class="form-control" placeholder="Nome do produto" required>
+                    <input type="text" name="nome" class="form-control" value={{ produto[1] }} required>
                 </div>
                 <div class="col-md-2">
-                    <input type="number" name="quantidade" class="form-control" placeholder="Quantidade" required>
+                    <input type="number" name="quantidade" class="form-control" value={{produto[2]}} required>
                 </div>
                 <div class="col-md-3">
-                    <input type="text" name="custo" class="form-control" placeholder="Custo por unidade" required>
+                    <input type="text" name="custo" class="form-control" value={{produto[4]|replace('.', ',')}} required>
                 </div>
                 <div class="col-md-3">
-                    <input type="text" name="valor" class="form-control" placeholder="Preço por unidade" required>
+                    <input type="text" name="valor" class="form-control" value={{produto[3]|replace('.', ',')}} required>
                 </div>
                 <div class="col-md-1">
                     <button type="submit" class="btn btn-primary w-100">⟳</button>
