--- a/templates/historico.html
+++ b/templates/historico.html
@@ -1,63 +1,82 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Histórico de Vendas</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background: linear-gradient(to right, #34ebab, #00c4cc);
-            color: #fff;
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            margin-top: 40px;
-        }
-        table {
-            background-color: #fff;
-            color: #333;
-        }
-        .table th {
-            background-color: #00bfa6;
-            color: #fff;
-        }
-    </style>
-</head>
-<body>
-<div class="container">
-    <h2 class="mb-4 text-center">Histórico de Vendas 💸</h2>
-    <table class="table table-bordered table-striped">
-        <thead class="table-success text-center">
-            <tr>
-                <th>ID</th>
-                <th>Produto</th>
-                <th>Quantidade</th>
-                <th>Valor Unitário</th>
-                <th>Valor Total</th>
-                <th>Data</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody class="text-center">
-            {% for venda in vendas %}
-            <tr>
-                <td>{{ venda[0] }}</td>
-                <td>{{ venda[1] }}</td>
-                <td>{{ venda[2] }}</td>
-                <td>R$ {{ venda[3] }}</td>
-                <td>R$ {{ venda[4] }}</td>
-                <td>{{ venda[5] }}</td>
-                <td><a href="{{ url_for('deletar_venda', id=venda[0]) }}" class="btn btn-danger btn-sm" onclick="return confirm('Tem certeza que deseja excluir esta venda?')">✖</a></td>
-
-            </tr>
-            {% endfor %}
-        </tbody>
+    <head>
+        <meta charset="UTF-8">
+        <title>Histórico de Vendas</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css">
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📦</text></svg>">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
         
-    </table>
-    <div class="col-md-1">
-            <a href="/" class="btn btn-danger w-50">↩</a>
-    </div>
-</div>
+        <style>
+            body {
+                background: linear-gradient(to right, #34ebab, #00c4cc);
+                color: #fff;
+                font-family: Arial, sans-serif;
+            }
+            .container {
+                margin-top: 40px;
+            }
+            table {
+                background-color: #fff;
+                color: #333;
+            }
+            .table th {
+                background-color: #00bfa6;
+                color: #fff;
+            }
+        </style>
+        <!-- Scripts do jQuery e DataTables -->
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+        <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
+        <script src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
 
-</body>
+        <script>
+        $(document).ready(function() {
+            $('#tabela-vendas').DataTable({
+                "language": {
+                    "url": "//cdn.datatables.net/plug-ins/1.13.4/i18n/pt-BR.json"
+                }
+            });
+        });
+        </script>
+
+    </head>
+    <body>
+    <div class="container">
+        <h2 class="mb-4 text-center">Histórico de Vendas 💸</h2>
+        <table id="tabela-vendas" class="table table-bordered table-striped">
+            <thead  class="table-success text-center">
+                <tr>
+                    <th>ID</th>
+                    <th>Produto</th>
+                    <th>Quantidade</th>
+                    <th>Valor Unitário</th>
+                    <th>Valor Total</th>
+                    <th>Data</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody class="text-center">
+                {% for venda in vendas %}
+                <tr>
+                    <td>{{ venda[0] }}</td>
+                    <td>{{ venda[1] }}</td>
+                    <td>{{ venda[2] }}</td>
+                    <td>R$ {{ "{:.2f}".format(venda[3])|replace('.', ',') }}</td>
+                    <td>R$ {{ "{:.2f}".format(venda[4])|replace('.', ',') }}</td>
+                    <td>{{ venda[5] }}</td>
+                    <td><a href="{{ url_for('deletar_venda', id=venda[0]) }}" class="btn btn-danger btn-sm" onclick="return confirm('Tem certeza que deseja excluir esta venda?')">✖</a></td>
+
+                </tr>
+                {% endfor %}
+            </tbody>
+            
+        </table>
+        <div class="col-md-1">
+                <a href="/" class="btn btn-danger w-50">↩</a>
+        </div>
+    </div>
+
+    </body>
 </html>
