--- a/templates/vender.html
+++ b/templates/vender.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Estoque</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📦</text></svg>">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             background: linear-gradient(to right, #34ebab, #00c4cc);
@@ -60,8 +62,8 @@
                 <tr>
                     <td>{{ produto[0] }}</td>
                     <td>{{ venda[2] }}</td>
-                    <td>R$ {{ venda[3] / venda[2] }}</td>
-                    <td>R$ {{ venda[3] }}</td>
+                    <td>R$ {{ "{:.2f}".format(venda[3] / venda[2])|replace('.', ',') }}</td>
+                    <td>R$ {{ "{:.2f}".format(venda[3])|replace('.', ',') }}</td>
                     <td> {{venda[4]}}</td>
                 </tr>
                 {% endfor %}
