--- a/templates/editar.html
+++ b/templates/editar.html
@@ -6,29 +6,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📦</text></svg>">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background: linear-gradient(to right, #34ebab, #00c4cc);
-            color: #fff;
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            margin-top: 40px;
-        }
-        .form-control, .btn {
-            margin-bottom: 10px;
-        }
-        table {
-            background-color: #fff;
-            color: #333;
-        }
-        .table th {
-            background-color: #00bfa6;
-            color: #fff;
-        }
-
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/estilo.css') }}">
 </head>
+
 <body>
     <div class="card p-4 shadow mb-4">
         <h4>Editar Produto: {{ produto[1] }}</h4>
